# troubador2

./: .gitignore  README.md  pyproject.toml
src/intelligent_game_decision_engine/: crew.py  main.py
src/intelligent_game_decision_engine/config/: agents.yaml  tasks.yaml
src/intelligent_game_decision_engine/tools/: game_action_executor_tool.py  music_generator_tool.py
