[project]
name = "intelligent_game_decision_engine"
version = "0.1.0"
description = "intelligent_game_decision_engine using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
]

[project.scripts]
intelligent_game_decision_engine = "intelligent_game_decision_engine.main:run"
run_crew = "intelligent_game_decision_engine.main:run"
train = "intelligent_game_decision_engine.main:train"
replay = "intelligent_game_decision_engine.main:replay"
test = "intelligent_game_decision_engine.main:test"
run_with_trigger = "intelligent_game_decision_engine.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
